# infer_sex

./: Cargo.toml  README.md
.github/workflows/: publish.yml  pypi-publish.yml  rust.yml
python/: .gitignore  README.md  pyproject.toml
python/infer_sex/: __init__.py  _api.py
python/tests/: test_infer_sex.py
src/: lib.rs
