[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "infer_sex"
version = "0.1.0"
description = "Infer genetic sex from variant data — Python port of the SauersML/infer_sex Rust crate."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SauersML" }]
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]
keywords = ["genomics", "bioinformatics", "genetics", "sex", "vcf", "plink"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/SauersML/infer_sex"
Issues = "https://github.com/SauersML/infer_sex/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["infer_sex"]
